--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+	html{
+		max-height: 700px;
+		max-width: 1500px;
+	}
+
 	body{
-		background-color: #00C8F8;
-		width: 526px;
+		background-color: #65DCF7;
+		overflow: auto;
 		position: relative;
 	    -moz-user-select: none;
 		-webkit-user-select: none;
@@ -9,10 +14,14 @@
 	}
 
 	main{
-		position:absolute;
-		left:-8px;
-		top:-8px;
-		width: 540px;
+		margin-left: auto;
+		margin-right: auto;
+		overflow: hidden;
+		border-radius: 7px;
+		border-radius: 7px;
+		box-shadow: 1px 1px 5px 3px #61939F;
+		margin-top: 150px;
+		width: 38%;
 	}
 
 	hr { 
@@ -48,21 +57,23 @@
 		display: inline-block;
 		position: relative;
 		color: #888;
-		text-shadow: 0 1px 0 rgba(255,255,255, 0.8);
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 		text-decoration: none;
 		text-align: center;
 		padding: 8px 12px;
 		font-size: 12px;
 		font-weight: 700;
 		font-family: helvetica, arial, sans-serif;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
 		border-radius: 4px;
 		border: 1px solid #bcbcbc;
-
-		-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-		box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(239,239,239,1) 60%,rgba(225,193,215,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(239,239,239,1) 60%,rgba(225,193,215,1) 100%);
+		-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
 	}
 
 	.button:hover {
@@ -73,6 +84,7 @@
 	.button:active:after,
 	.button:active:before {
 		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
 		box-shadow: none;
 	}
 
@@ -81,38 +93,42 @@
 	}
 
 	.button.back:after {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 50%;
 		width: 15px;
 		border-left: 1px solid #bcbcbc;
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
 		left: -5px;
 		top: 1px;
-
+		-moz-transform: skew(-35deg, 0);
+		-ms-transform: skew(-35deg, 0);
+		-o-transform: skew(-35deg, 0);
 		-webkit-transform: skew(-35deg, 0);
 		transform: skew(-35deg, 0);
 	}
 
 	.button.back:before {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 48%;
 		width: 15px;
 		border-left: 1px solid #bcbcbc;
 		bottom: 1px;
 		left: -5px;
-
+		-moz-transform: skew(35deg, 0);
+		-ms-transform: skew(35deg, 0);
+		-o-transform: skew(35deg, 0);
 		-webkit-transform: skew(35deg, 0);
 		transform: skew(35deg, 0);
-
-		background-image: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,193,226,1) 100%);
-		background-image: linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,223,226,1) 100%);
-
-		-webkit-box-shadow: -2px 1px 2px rgba(100,100,100,0.1);
-		box-shadow: -2px 1px 2px rgba(100,100,100,0.1);
+		background-image: -webkit-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 223, 226, 1) 100%);
+		-moz-box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
+		-webkit-box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
+		box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
 	}
 
 	.button.next {
@@ -120,36 +136,40 @@
 	}
 
 	.button.next:after {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 48%;
 		width: 15px;
 		border-right: 1px solid #bcbcbc;
-
-		background-image: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,193,226,1) 100%);
-		background-image: linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,223,226,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 223, 226, 1) 100%);
 		right: -5px;
 		bottom: 1px;
-
+		-moz-transform: skew(-35deg, 0);
+		-ms-transform: skew(-35deg, 0);
+		-o-transform: skew(-35deg, 0);
 		-webkit-transform: skew(-35deg, 0);
 		transform: skew(-35deg, 0);
-
-		-webkit-box-shadow: 2px 1px 2px rgba(100,100,100,0.1);
-		box-shadow: 2px 1px 2px rgba(100,100,100,0.1);
+		-moz-box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
+		-webkit-box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
+		box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
 	}
 
 	.button.next:before {
-		content: '';
+		content: "";
 		position: absolute;
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
 		height: 50%;
 		width: 15px;
 		border-right: 1px solid #bcbcbc;
 		top: 1px;
 		right: -5px;
-
+		-moz-transform: skew(35deg, 0);
+		-ms-transform: skew(35deg, 0);
+		-o-transform: skew(35deg, 0);
 		-webkit-transform: skew(35deg, 0);
 		transform: skew(35deg, 0);
 	}
@@ -162,7 +182,9 @@
 		height: 45px;
 		width: 100%;
 		position:relative;
-		border: thin solid #00C8F8;
+		border-top-left-radius: 7px;
+		border-top-right-radius: 7px;
+		border: 2px solid #61939F;
 	}
 
 	#bt_body{
@@ -170,14 +192,16 @@
 		position:relative;
 		height:400px;
 		border: 2px solid #61939F;
-		width: 99.7%;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
+		width: 100%;
 		z-index: 5;
+
 	}
 
 	#bt_header > div:first-of-type{
-		border: 1px solid #00C8F8;
 		float:left;
-		width: 90%;
+		width: 91.3%;
 		height:45px;
 		left:0;
 		top:0;
@@ -191,11 +215,12 @@
 		border-radius: 4px;
 		cursor: pointer;
 		float:left;
-		width: 9%;
+		width: 46px;
 		height:46px;
 		z-index: 4;
+		padding-right: 0;
 		margin-top: 1px;
-		right:0;
+		right:100px;
 	}
 
 
@@ -329,7 +354,8 @@
 
 	#welcome_guide_block > section > p > img {
 		top: 4px;
-		left: 10px;
+		left: 8px;
+		margin-right: 5px;
 		width: 20px;
 		height: 20px;
 		position: relative;	
@@ -823,3 +849,49 @@
 		padding-left: 5px;
 		font-size: 12px;
 	}
+
+.authBtn {
+	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
+	background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
+	background-color:#b6cdf5;
+	-moz-border-radius:10px;
+	margin-left: 650px;
+	margin-top: 20px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:19px;
+	padding:6px 27px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+.authBtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
+	background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
+	background-color:#5893db;
+}
+.authBtn:active {
+	position:relative;
+	top:1px;
+}
+
+.authBtn:disabled{
+	background: grey;
+}
