--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 	body{
 		background-color: #65DCF7;
-
+		overflow: auto;
 		position: relative;
 	    -moz-user-select: none;
 		-webkit-user-select: none;
@@ -34,7 +34,7 @@
 	div[data-activity-type = "food"],
 	div[data-activity-type = "diaper"],
 	div[data-activity-type = "weight"]{
-		background: url("images/activities.png") no-repeat 0 0;
+		background: url("../images/activities.png") no-repeat 0 0;
 		width: 65px;
 		height: 65px;
 	}
@@ -57,21 +57,23 @@
 		display: inline-block;
 		position: relative;
 		color: #888;
-		text-shadow: 0 1px 0 rgba(255,255,255, 0.8);
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 		text-decoration: none;
 		text-align: center;
 		padding: 8px 12px;
 		font-size: 12px;
 		font-weight: 700;
 		font-family: helvetica, arial, sans-serif;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
 		border-radius: 4px;
 		border: 1px solid #bcbcbc;
-
-		-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-		box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(239,239,239,1) 60%,rgba(225,193,215,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(239,239,239,1) 60%,rgba(225,193,215,1) 100%);
+		-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(239, 239, 239, 1) 60%, rgba(225, 193, 215, 1) 100%);
 	}
 
 	.button:hover {
@@ -82,6 +84,7 @@
 	.button:active:after,
 	.button:active:before {
 		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
 		box-shadow: none;
 	}
 
@@ -90,38 +93,42 @@
 	}
 
 	.button.back:after {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 50%;
 		width: 15px;
 		border-left: 1px solid #bcbcbc;
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
 		left: -5px;
 		top: 1px;
-
+		-moz-transform: skew(-35deg, 0);
+		-ms-transform: skew(-35deg, 0);
+		-o-transform: skew(-35deg, 0);
 		-webkit-transform: skew(-35deg, 0);
 		transform: skew(-35deg, 0);
 	}
 
 	.button.back:before {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 48%;
 		width: 15px;
 		border-left: 1px solid #bcbcbc;
 		bottom: 1px;
 		left: -5px;
-
+		-moz-transform: skew(35deg, 0);
+		-ms-transform: skew(35deg, 0);
+		-o-transform: skew(35deg, 0);
 		-webkit-transform: skew(35deg, 0);
 		transform: skew(35deg, 0);
-
-		background-image: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,193,226,1) 100%);
-		background-image: linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,223,226,1) 100%);
-
-		-webkit-box-shadow: -2px 1px 2px rgba(100,100,100,0.1);
-		box-shadow: -2px 1px 2px rgba(100,100,100,0.1);
+		background-image: -webkit-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 223, 226, 1) 100%);
+		-moz-box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
+		-webkit-box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
+		box-shadow: -2px 1px 2px rgba(100, 100, 100, 0.1);
 	}
 
 	.button.next {
@@ -129,36 +136,40 @@
 	}
 
 	.button.next:after {
-		content: '';
+		content: "";
 		position: absolute;
 		height: 48%;
 		width: 15px;
 		border-right: 1px solid #bcbcbc;
-
-		background-image: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,193,226,1) 100%);
-		background-image: linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,223,226,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 193, 226, 1) 100%);
+		background-image: linear-gradient(top, rgba(240, 240, 240, 1) 0%, rgba(239, 239, 239, 1) 10%, rgba(225, 223, 226, 1) 100%);
 		right: -5px;
 		bottom: 1px;
-
+		-moz-transform: skew(-35deg, 0);
+		-ms-transform: skew(-35deg, 0);
+		-o-transform: skew(-35deg, 0);
 		-webkit-transform: skew(-35deg, 0);
 		transform: skew(-35deg, 0);
-
-		-webkit-box-shadow: 2px 1px 2px rgba(100,100,100,0.1);
-		box-shadow: 2px 1px 2px rgba(100,100,100,0.1);
+		-moz-box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
+		-webkit-box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
+		box-shadow: 2px 1px 2px rgba(100, 100, 100, 0.1);
 	}
 
 	.button.next:before {
-		content: '';
+		content: "";
 		position: absolute;
-
-		background-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
-		background-image: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
+		background-image: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 1%, rgba(240, 240, 240, 1) 100%);
 		height: 50%;
 		width: 15px;
 		border-right: 1px solid #bcbcbc;
 		top: 1px;
 		right: -5px;
-
+		-moz-transform: skew(35deg, 0);
+		-ms-transform: skew(35deg, 0);
+		-o-transform: skew(35deg, 0);
 		-webkit-transform: skew(35deg, 0);
 		transform: skew(35deg, 0);
 	}
@@ -198,7 +209,7 @@
 
 	#bt_person_profile{
 		box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.7);
-		background: url("images/profile avatars/Ilia.png") no-repeat 0 0;
+		background: url("../images/profile avatars/Ilia.png") no-repeat 0 0;
 		background-size: cover;
 		border: 1px solid #61939F;
 		border-radius: 4px;
@@ -251,7 +262,7 @@
 		top:50%;								/* center align */
 		transform: translate(0, -50%);			/* vertically   */
 		cursor: pointer;
-		background: url("images/search_icon.png") no-repeat 0 0;
+		background: url("../images/search_icon.png") no-repeat 0 0;
 	}
 
 	#bt_search_engine_area > span:last-child{
@@ -262,7 +273,7 @@
 		top:50%;								/* center align */
 		transform: translate(0, -50%);			/* vertically   */
 		cursor: pointer;
-		background: url("images/search_close_icon.png") no-repeat 0 0;
+		background: url("../images/search_close_icon.png") no-repeat 0 0;
 	}
 
 	#add_event_button{
@@ -272,7 +283,7 @@
 		cursor: pointer;
 		width: 38px;
 		height: 38px;
-		background: url("images/add_action_buttons.png") no-repeat 0 0 ;
+		background: url("../images/add_action_buttons.png") no-repeat 0 0 ;
 	}
 
 
@@ -627,7 +638,7 @@
 	#wizard_new_activity > section > div:first-of-type > div.add_person_button  div div,
 	#food_content > section > div:first-of-type > div.add_person_button  div div{
 		cursor: pointer;
-		background: url("images/add_action_buttons.png") no-repeat -39px 0px;
+		background: url("../images/add_action_buttons.png") no-repeat -39px 0px;
 		width: 41px;
 		height: 41px;
 	}
@@ -837,4 +848,80 @@
 		text-align: left;
 		padding-left: 5px;
 		font-size: 12px;
+	}
+
+	.authBtn {
+		-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+		-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+		box-shadow: 0px 0px 0px 2px #9fb4f2;
+		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
+		background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+		background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+		background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+		background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+		background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
+		background-color:#b6cdf5;
+		-moz-border-radius:10px;
+		-webkit-border-radius:10px;
+		border-radius: 10px;
+		border:1px solid #4e6096;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+		font-family:arial;
+		font-size:17px;
+		margin-bottom: 5px;
+		padding:5px 20px;
+		text-decoration:none;
+		text-shadow:0px 1px 0px #283966;
+	}
+
+	.authBtn:hover {
+		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
+		background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+		background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+		background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+		background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+		background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
+		background-color:#5893db;
+	}
+
+	.authBtn:focus{
+		outline: none;
+	}
+
+	.authBtn:active {
+		position:relative;
+		top:1px;
+	}
+
+	.authBtn:disabled {
+		background: gray;
+		cursor: default;
+	}
+
+	.modal-body > div:first-of-type{
+		width: 25%; 
+		margin-left:auto; 
+		margin-right: auto;
+	}
+
+	.modal-body > h4:only-of-type{
+		font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
+		color: #008AAA;
+		text-align: center;
+		font-size: 20px;
+	}
+
+	.modal-body > div:first-of-type > img{
+		width: 150px;
+		height: 49px;
+	}
+
+	.modal-body > div:last-of-type{
+		width: 25%; 
+		margin-left:auto; 
+		margin-right: auto;
 	}
