--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,18 @@
 		max-height: 700px;
 		max-width: 1500px;
 	}
-
+	*{
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+	}
 	body{
 		background-color: #65DCF7;
 		overflow: auto;
 		position: relative;
-	    -moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select:none;
-		user-select:none;
 	}
 
 	main{
@@ -286,6 +289,9 @@
 		background: url("../images/add_action_buttons.png") no-repeat 0 0 ;
 	}
 
+	#add_event_button[disabled]{
+		background-position: -81px 0px;
+	}
 
 	.clear{
 		clear:both;
@@ -850,7 +856,7 @@
 		font-size: 12px;
 	}
 
-<<<<<<< HEAD:style.css
+
 .authBtn {
 	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
 	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
@@ -864,10 +870,9 @@
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
 	background-color:#b6cdf5;
 	-moz-border-radius:10px;
-	margin-left: 650px;
 	margin-top: 20px;
 	-webkit-border-radius:10px;
-	border-radius:10px;
+	border-radius:12px;
 	border:1px solid #4e6096;
 	display:inline-block;
 	cursor:pointer;
@@ -878,6 +883,7 @@
 	text-decoration:none;
 	text-shadow:0px 1px 0px #283966;
 }
+
 .authBtn:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
 	background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
@@ -888,6 +894,7 @@
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
 	background-color:#5893db;
 }
+
 .authBtn:active {
 	position:relative;
 	top:1px;
@@ -896,80 +903,79 @@
 .authBtn:disabled{
 	background: grey;
 }
-=======
-	.authBtn {
-		-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
-		-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
-		box-shadow: 0px 0px 0px 2px #9fb4f2;
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
-		background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
-		background-color:#b6cdf5;
-		-moz-border-radius:10px;
-		-webkit-border-radius:10px;
-		border-radius: 10px;
-		border:1px solid #4e6096;
-		display:inline-block;
-		cursor:pointer;
-		color:#ffffff;
-		font-family:arial;
-		font-size:17px;
-		margin-bottom: 5px;
-		padding:5px 20px;
-		text-decoration:none;
-		text-shadow:0px 1px 0px #283966;
-	}
 
-	.authBtn:hover {
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
-		background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
-		background-color:#5893db;
-	}
+.authBtn {
+	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
+	background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
+	background-color:#b6cdf5;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius: 10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:17px;
+	margin-bottom: 5px;
+	padding:5px 20px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
 
-	.authBtn:focus{
-		outline: none;
-	}
+.authBtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
+	background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
+	background-color:#5893db;
+}
 
-	.authBtn:active {
-		position:relative;
-		top:1px;
-	}
+.authBtn:focus{
+	outline: none;
+}
 
-	.authBtn:disabled {
-		background: gray;
-		cursor: default;
-	}
+.authBtn:active {
+	position:relative;
+	top:1px;
+}
 
-	.modal-body > div:first-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
-	}
+.authBtn:disabled {
+	background: gray;
+	cursor: default;
+}
 
-	.modal-body > h4:only-of-type{
-		font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
-		color: #008AAA;
-		text-align: center;
-		font-size: 20px;
-	}
+.modal-body > div:first-of-type{
+	width: 25%; 
+	margin-left:auto; 
+	margin-right: auto;
+}
 
-	.modal-body > div:first-of-type > img{
-		width: 150px;
-		height: 49px;
-	}
+.modal-body > h4:only-of-type{
+	font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
+	color: #008AAA;
+	text-align: center;
+	font-size: 20px;
+}
 
-	.modal-body > div:last-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
-	}
->>>>>>> origin/master:css/style.css
+.modal-body > div:first-of-type > img{
+	width: 150px;
+	height: 49px;
+}
+
+.modal-body > div:last-of-type{
+	width: 25%; 
+	margin-left:auto; 
+	margin-right: auto;
+}
