--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,19 @@
-	html{
-		max-height: 700px;
-		max-width: 1500px;
-	}
 
+	*{
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+
+	}
+	
 	body{
 		background-color: #65DCF7;
 		overflow: auto;
-		position: relative;
-	    -moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select:none;
-		user-select:none;
+		margin:0;
+		padding:0;
 	}
 
 	main{
@@ -20,8 +23,9 @@
 		border-radius: 7px;
 		border-radius: 7px;
 		box-shadow: 1px 1px 5px 3px #61939F;
-		margin-top: 150px;
-		width: 38%;
+		width: 600px;
+		height: 448px;
+		margin-top: 100px;
 	}
 
 	hr { 
@@ -180,7 +184,7 @@
 	#bt_header{
 		background-color: #00C8F8;
 		height: 45px;
-		width: 100%;
+		width: calc(600px - 4px);			/*	bt_header-width = (bt_header - 2 * border-width)*/
 		position:relative;
 		border-top-left-radius: 7px;
 		border-top-right-radius: 7px;
@@ -194,7 +198,7 @@
 		border: 2px solid #61939F;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
-		width: 100%;
+		width: calc(600px - 4px);			/*	bt_body-width = (bt_body-width - 2 * border-width)*/
 		z-index: 5;
 
 	}
@@ -286,6 +290,9 @@
 		background: url("../images/add_action_buttons.png") no-repeat 0 0 ;
 	}
 
+	#add_event_button[disabled]{
+		background-position: -81px 0px;
+	}
 
 	.clear{
 		clear:both;
@@ -294,10 +301,10 @@
 	#bt_container{
 		/*border: 1px solid #61939F;
 		background-color: white;*/
+		position: absolute;
 		width:80%;
 		height: 78%;
-		top:5%;
-		position:absolute;								
+		top:6%;							
 		margin: auto 9%;
 	}
 
@@ -757,7 +764,7 @@
 
 
 	#posted_results_table{
-		position: relative;
+		
 		display: none;
 		cursor: default;
 		border-radius: 3px;
@@ -773,8 +780,16 @@
 		font-size: 15px;
 	    border-collapse: collapse;
 	    border-spacing: 0px 4px;
-	    border: 1px solid #787;
 		border-radius:5px;
+	}
+
+	#posted_results_table   table  tbody{
+		display: block;
+		height: 275px;
+	    overflow-y: auto;
+	    overflow-x: hidden;
+	    border:0;
+	    outline: 0;
 	}
 
 	#posted_results_table tr{
@@ -850,78 +865,126 @@
 		font-size: 12px;
 	}
 
-	.authBtn {
-		-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
-		-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
-		box-shadow: 0px 0px 0px 2px #9fb4f2;
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
-		background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
-		background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
-		background-color:#b6cdf5;
-		-moz-border-radius:10px;
-		-webkit-border-radius:10px;
-		border-radius: 10px;
-		border:1px solid #4e6096;
-		display:inline-block;
-		cursor:pointer;
-		color:#ffffff;
-		font-family:arial;
-		font-size:17px;
-		margin-bottom: 5px;
-		padding:5px 20px;
-		text-decoration:none;
-		text-shadow:0px 1px 0px #283966;
-	}
 
-	.authBtn:hover {
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
-		background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
-		background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
-		background-color:#5893db;
-	}
+.authBtn {
+	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
+	background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
+	background-color:#b6cdf5;
+	-moz-border-radius:10px;
+	margin-top: 20px;
+	-webkit-border-radius:10px;
+	border-radius:12px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:19px;
+	padding:6px 27px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
 
-	.authBtn:focus{
-		outline: none;
-	}
+.authBtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
+	background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
+	background-color:#5893db;
+}
 
-	.authBtn:active {
-		position:relative;
-		top:1px;
-	}
+.authBtn:active {
+	position:relative;
+	top:1px;
+}
 
-	.authBtn:disabled {
-		background: gray;
-		cursor: default;
-	}
+.authBtn:disabled{
+	background: grey;
+}
 
-	.modal-body > div:first-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
-	}
+.authBtn {
+	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b6cdf5), color-stop(1, #5893db));
+	background:-moz-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-webkit-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-o-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:-ms-linear-gradient(top, #b6cdf5 5%, #5893db 100%);
+	background:linear-gradient(to bottom, #b6cdf5 5%, #5893db 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b6cdf5', endColorstr='#5893db',GradientType=0);
+	background-color:#b6cdf5;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius: 10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:17px;
+	margin-bottom: 5px;
+	padding:5px 20px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
 
-	.modal-body > h4:only-of-type{
-		font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
-		color: #008AAA;
-		text-align: center;
-		font-size: 20px;
-	}
+.authBtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5893db), color-stop(1, #b6cdf5));
+	background:-moz-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-webkit-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-o-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:-ms-linear-gradient(top, #5893db 5%, #b6cdf5 100%);
+	background:linear-gradient(to bottom, #5893db 5%, #b6cdf5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5893db', endColorstr='#b6cdf5',GradientType=0);
+	background-color:#5893db;
+}
 
-	.modal-body > div:first-of-type > img{
-		width: 150px;
-		height: 49px;
-	}
+.authBtn:focus{
+	outline: none;
+}
 
-	.modal-body > div:last-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
-	}
+.authBtn:active {
+	position:relative;
+	top:1px;
+}
+
+.authBtn:disabled {
+	background: gray;
+	cursor: default;
+}
+
+.modal-body > div:first-of-type{
+	width: 25%; 
+	margin-left:auto; 
+	margin-right: auto;
+}
+
+.modal-body > h4:only-of-type{
+	font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
+	color: #008AAA;
+	text-align: center;
+	font-size: 20px;
+}
+
+.modal-body > div:first-of-type > img{
+	width: 150px;
+	height: 49px;
+}
+
+.modal-body > div:last-of-type{
+	width: 25%; 
+	margin-left:auto; 
+	margin-right: auto;
+}
