--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-	html{
-		max-height: 700px;
-		max-width: 1500px;
-	}
-	
+
 	*{
 		-webkit-touch-callout: none;
 		-webkit-user-select: none;
@@ -15,7 +11,8 @@
 	body{
 		background-color: #65DCF7;
 		overflow: auto;
-		position: relative;
+		margin:0;
+		padding:0;
 	}
 
 	main{
@@ -25,8 +22,9 @@
 		border-radius: 7px;
 		border-radius: 7px;
 		box-shadow: 1px 1px 5px 3px #61939F;
-		margin-top: 150px;
-		width: 38%;
+		width: 600px;
+		height: 448px;
+		margin-top: 100px;
 	}
 
 	hr { 
@@ -184,8 +182,8 @@
 
 	#bt_header{
 		background-color: #00C8F8;
-		height: 45px;
-		width: 100%;
+		height: calc(45px - 4px);			/*	full-bt_header-height = (parent-height - 2 * border-height)	*/
+		width: calc(600px - 4px);			/*	full-bt_header-width = (parent-width - 2 * border-width)	*/
 		position:relative;
 		border-top-left-radius: 7px;
 		border-top-right-radius: 7px;
@@ -199,15 +197,15 @@
 		border: 2px solid #61939F;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
-		width: 100%;
+		width: calc(600px - 4px);			/*	full-#bt_body-width = (parent-width - 2 * border-width)*/
 		z-index: 5;
 
 	}
 
 	#bt_header > div:first-of-type{
 		float:left;
-		width: 91.3%;
-		height:45px;
+		width:	calc(596px - 45px);			/*	full-#bt_header > div:first-of-type = (parent-content-width - bt_person_profile-width)	*/
+		height:	45px;
 		left:0;
 		top:0;
 	}
@@ -217,15 +215,17 @@
 		background: url("../images/profile avatars/Ilia.png") no-repeat 0 0;
 		background-size: cover;
 		border: 1px solid #61939F;
-		border-radius: 4px;
+		border-top-left-radius: 4px;
+		border-top-right-radius: 4px;
 		cursor: pointer;
 		float:left;
-		width: 46px;
-		height:46px;
+		width: calc(45px - 4px);			/*	full-bt_person_profile-width = (parent-height - 2 * border-width) */
+		height:	calc(45px - 4px);			/*	full-bt_person_profile-height = (parent-height - 2 * border-height) */
 		z-index: 4;
 		padding-right: 0;
 		margin-top: 1px;
-		right:100px;
+		margin-left: 1px;
+  		margin-right: 1px;
 	}
 
 
@@ -781,7 +781,6 @@
 		font-size: 15px;
 	    border-collapse: collapse;
 	    border-spacing: 0px 4px;
-	    border: 1px solid #787;
 		border-radius:5px;
 	}
 
