--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@
 
 	#bt_person_profile{
 		box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.7);
-		background: url("../images/profile avatars/Ilia.png") no-repeat 0 0;
+		background: url("../images/profile avatars/graf.png") no-repeat 0 0;
 		background-size: cover;
 		border: 1px solid #61939F;
 		border-top-left-radius: 4px;
