Data Structure Completed

--- a/less/styles.less
+++ b/less/styles.less
@@ -6,4 +6,5 @@
 @import url("buttons/auth-btn.less");
 @import url("buttons/next-back-btn.less");
 @import url("windows/create_person.less");
+@import url("windows/posted_results.less");
 @import url("main.less");
