--- a/less/windows/create_person.less
+++ b/less/windows/create_person.less
@@ -1,6 +1,3 @@
-	@import url("../mixins/mixins.less");
-	@import url("../vars/variables.less");
-
 	#create_person_block{
 		position: relative;
 		border: thin solid #969696;
@@ -106,7 +103,7 @@
 				height: 65px;
 				float: left;
 				margin-right: 20px; 
-				&[data-avatar-type = "type3"]{
+				&[data-avatar-type = "2"]{
 
 					&.uploaded > img{
 						.border-radius(6px);
