Added Loading Sign Updated

--- a/less/main.less
+++ b/less/main.less
@@ -552,7 +552,19 @@
 			text-shadow: 1px 1px 3px blue;
 			float: none;
 		}
-
-
 	}
 
+
+	#loading_sign{
+		position: absolute;
+		cursor: default;
+		padding-left: 40px;
+		width: 95%;
+		height: 100%;
+		z-index: 20000;
+		img{
+			.centrify("both", 75px, 99px);
+		}
+	}
+
+	
