Issue #3 - Displaying Date on main entries table

--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,3 @@
-	@import url("mixins/mixins.less");
-	@import url("vars/variables.less");
-
 	body, html{
 		height: 100%;
 	}
@@ -25,7 +22,7 @@
 		height: @app-height;
 		.centrify('both', @app-width, @app-height);
 		.border-radius(7px);
-		.box-shadow(1px 1px 5px 3px #61939F);
+		.box-shadow(1px 1px 1px 0px #61939f);
 	}
 
 	hr { 
@@ -524,6 +521,7 @@
 		body{
 			display: table;
 			height: 100%;
+			
 		}
 
 		main{
