--- a/less/main.less
+++ b/less/main.less
@@ -9,6 +9,18 @@
 		margin: 0;
 		padding: 0;
 	}
+	
+	/*.date-hint-bar{
+		background-color: #EBEBEB;
+		width: 500px - 33px;
+		padding-top: 3px;
+		padding-bottom: 3px;
+		position: absolute;
+		z-index: 9;
+		text-align: left;
+		font-size: 13px;
+		color: #7F8082;
+	}*/
 
 	* { .user-select(none);	}
 
