Issue #3. Collaboration. Test 2

--- a/less/windows/create_person.less
+++ b/less/windows/create_person.less
@@ -1,5 +1,5 @@
 	#create_person_block{
-		position: relative;
+		//position: relative;
 		border: thin solid #969696;
 		display: none;
 		cursor: default;
