--- a/less/main.less
+++ b/less/main.less
@@ -208,22 +208,21 @@
 		/*border: 1px solid #61939F;
 		background-color: white;*/
 		position: absolute;
-		width: 80%;
+		width: 82%;
 		height: 78%;
 		top: 6%;							
 		margin: auto 9%;
 	}
 
 	#welcome_guide_block{
-		position: relative;
 		border: thin solid #969696;
 		display: none;
 		cursor: default;
 		background: #FFF;
-		padding: 10px 5px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 		width: 90%;
-		left: 25px;
-		top: 8%;
+		margin: 5.83038869% 5%;
 		.border-radius(5px);
 	}
 	
@@ -278,8 +277,8 @@
 	}
 
 	#welcome_guide_block > section > p + img{
-		top: 230px;
-		left: 225px;
+		top: 260px;
+		left: 240px;
 		width: 173px;
 		height: 108px;
 		z-index: 5;
@@ -333,7 +332,7 @@
 	#wizard_new_activity,
 	#diaper_content,
 	#food_content{
-		position: relative;
+		
 		border: thin solid #969696;
 		display: none;
 		cursor: default;
