--- a/less/styles.less
+++ b/less/styles.less
@@ -1,4 +1,6 @@
+
 @import url("../css/bootstrap.css");
+//@import url("../css/materialize.css");
 @import url("../css/jquery-ui.min.css");
 @import url("../css/jquery.simplecolorpicker.css");
 @import url("../css/jquery.simplecolorpicker-glyphicons.css");
@@ -8,3 +10,4 @@
 @import url("windows/create_person.less");
 @import url("windows/posted_results.less");
 @import url("main.less");
+@import url("mobile.less");
