--- a/less/main.less
+++ b/less/main.less
@@ -518,69 +518,56 @@
 	/*************************************************************/
 
 
+	#authModal.laptop{
+		.bs-modal-body {
+			padding-top: 0;
+			padding-bottom: 0;
 
-	.modal-body > div:first-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
+			> div:first-of-type{
+				font-size: 30px;
+				text-align: center;
+				color: blue;
+			}
+
+			> div:nth-of-type(2){
+				width: 170px;
+				height: 170px;
+				margin-right: auto;
+				margin-left: auto;
+				text-align: center;
+			}
+
+			> div:nth-of-type(3){
+				text-align: center;
+				padding: 20px 60px;
+				font-size: 20px;
+			}
+
+			> div:nth-of-type(4){
+				text-align: center;
+				div{
+					width: 100%;
+					margin-right: auto;
+					margin-left: auto;
+					padding-top: 10px;
+					padding-bottom: 10px;
+					button{
+							background-color: #DE4B39;
+							font-size: 15px;
+							color: white;
+							padding:5px 20px;
+							text-decoration:none;
+							text-shadow:0px 1px 0px #283966;
+							border-radius: 3px;
+							box-shadow: 1px 1px 5px grey;
+						}
+				}
+			}
+		}
 	}
 
-	.modal-body > h4:only-of-type{
-		font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
-		color: #008AAA;
-		text-align: center;
-		font-size: 20px;
-	}
-
-	.modal-body > div:first-of-type > img{
-		width: 150px;
-		height: 49px;
-	}
-
-	.modal-body > div:last-of-type{
-		width: 25%; 
-		margin-left:auto; 
-		margin-right: auto;
-	}
-
-	@media all and (max-width:601px), all and (max-height: 450px){
-
-		html{
-			height: 100%;
-		}
-
-		body{
-			display: table;
-			height: 100%;
-			
-		}
-
-		main{
-			margin-top: 0px;
-		}
-
-		body > *:not(.mobile-disabled-alarm) {
-			display: none;
-		}
-
-		.mobile-disabled-alarm{
-			margin-right: auto;
-			margin-left: auto;
-			width: 70%;
-			height: 100%;
-			overflow: hidden;
-			display: table-cell;
-			vertical-align: middle;
-			padding-left: 30px;
-			padding-right: 30px;
-			text-align: center;
-			font-size: 30px;
-			font-weight: bold;
-			font-family: ‘Courier New’, Courier, monospace;
-			color: white;
-			text-shadow: 1px 1px 3px blue;
-			float: none;
-		}
+	.bs-modal-content{
+		padding: 30px 0px;
 	}
 
 
