--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,144 +1,85 @@
 @media all and (max-width:601px), all and (max-height: 450px){
-		html{
-			height: 100%;
-		}
-
 		body{
 			display: table;
-			height: 100%;
+			overflow: hidden;
+			> *:not(.mobile-disabled-alarm) {
+				display: none;
+			}
 		}
 
 		main{
 			margin-top: 0px;
 		}
 
-		body > *:not(.mobile-disabled-alarm) {
-			display: none;
+		#authModal{
+			top: 0% !important;
+			height:100% !important;
+			width:100% !important;
+			max-height: 100%;
+			margin : 0; 
+			border-radius: 0px;
+		} 
+
+		/*** reset styles for mobile ***/
+		.auth-page * {
+			float: none;
+			width: auto;
+		}
+		/*******************************/
+
+		.modal-content {    
+			height: 100%;
+			//background-color: @bg-color;
+			box-shadow: none;
 		}
 
-		#authModal.mobile{
-
-			.bs-modal-dialog {
-			      width: 100%;
-			      height: 100%;
-			      padding: 0;
-			      margin:0;
-			      overflow: hidden;
-			}
-			.bs-modal-content {    
-				height: 100%;
-				border-radius: 0;
-				background-color: @bg-color;
-				box-shadow: none;
-				padding: 0;
-			}
-
-			.bs-modal-body{
-				padding: 0;
-				height: 100%;
-			}
-
-			.bs-modal-body > div{
-
-				&:first-child, &:nth-child(2), &:nth-child(3), &:nth-child(4){
-					width: 100%;
-					display: table;
-				}
-
-				/* header "Snug Baby" */
-				&:first-child {
-					font-size: 42px;
-					height: 15%;
-					font-family: 'Satisfy', cursive;
-					color: white;
-					text-align: center;
-					div{
-						display: table-cell;
-	    				vertical-align: bottom;
-					}
-				}
-
-				/* Snug Baby svg Logo */
-				&:nth-child(2){
-					height: 45%;
-					z-index: 1;
-					object {
-						display: block;
-						margin-left: 0 auto;
-						height: 100%;
-						width: 100%;
-					}
-				}
-
-				/* Brief Snug Baby description */
-				&:nth-child(3){
-					font-family: 'Actor', sans-serif;
-					color: #01717F;
-					font-size: 14px;
-					line-height: 20px;
-					height: 18%;
-					text-align: center;
-					div{
-						padding-left: 40px;
-						padding-right: 40px;
-						padding-top: 15px;
-						display: table-cell;
-						vertical-align: top;
-					}
-				}
-
-				/* Authentication button */
-				&:nth-child(4){
-					height: 22%;
-					text-align: center;
-					div{
-						width: 100%;
-						margin-right: auto;
-						margin-left: auto;
-						display: table-cell;
-						vertical-align: middle;
-						button{
-							width: 80%;
-							background-color: #DE4B39;
-							padding: 10px;
-							font-size: 15px;
-							color: white;
-							border-radius: 3px;
-							box-shadow: 1px 1px 5px grey;
-						}
-					}
-				}
-			}
+		.modal-body{
+			height: 100%;
 		}
+
+		/* header "Snug Baby" */
+		#auth-page-header { 	font-size: 42px;	}
+
+		/* Brief Snug Baby description */
+		#auth-page-summary{
+			font-family: 'Actor', sans-serif;
+			color: #01717F;
+			font-size: 14px;
+			//line-height: 20px;
+
+			div{   
+				padding-top: 15px; 
+				padding-bottom: 0px;  
+			}
+
+		}
+		
+		.normalized{
+			height: auto !important;
+		}
+		
 
 		.mobile-disabled-alarm{
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 			z-index: -1;
-			margin-right: auto;
-			margin-left: auto;
-			width: 70%;
 			height: 100%;
-			overflow: hidden;
-			display: table-cell;
-			vertical-align: middle;
 			padding-left: 5%;
 			padding-right: 5%;
 			text-align: center;
 			font-size: 30px;
 			font-weight: bold;
-			font-family: ‘Courier New’, Courier, monospace;
+			font-family: 'Courier New', Courier, monospace;
 			color: white;
 			text-shadow: 1px 1px 3px blue;
-			float: none;
 		}
 	}
 
 	@media screen and (max-width: 243px) and (max-height: 744px) {
-		#authModal.mobile  .bs-modal-body > div{
-
-			/* Authentication button */
-			&:nth-child(4)  button{
-				width: 70%;
-			}
+		/* Authentication button */
+		#authModal  .modal-body > div:nth-child(4)  button{
+			width: 70%;
 		}
 	}
 
@@ -152,4 +93,3 @@
 
 	@media screen and (max-width: 650px) {
 	}
-
