Added 2 features: 1) An opportunity to return to Start Page by clicking main app title (to the top left)   2) Materialize is enabled when mobile, but disabled when pc.

--- a/less/main.less
+++ b/less/main.less
@@ -124,6 +124,7 @@
 	#bt_title_main{
 		color: #FFFFFF;
 		float: left;
+		cursor: pointer;
 		font-weight: bold;
 		font-size: 16px;
 		width: 27.92792793%; 						/* (@title-main-width / @header-width)*100%; */
@@ -543,6 +544,7 @@
 
 	#authModal{
 		overflow: hidden !important;
+		display: none;
 		height: 410px;
 	}
 
@@ -557,7 +559,7 @@
 		height: 100%;
 	}
 
-	#auth-page-header, #auth-page-logo, #auth-page-text, #auth-page-submit{
+	#auth-page-header, #auth-page-logo, #auth-page-summary, #auth-page-submit{
 		width: 100%;
 		display: flex;
 		flex-direction: column;
@@ -614,5 +616,3 @@
 			}
 		}
 	}
-
-	
