--- a/less/mobile.less
+++ b/less/mobile.less
@@ -17,7 +17,7 @@
 			width:100% !important;
 			max-height: 100%;
 			margin : 0; 
-			border-radius: 0px;
+			.border-radius(0px);
 		} 
 
 		/*** reset styles for mobile ***/
@@ -60,7 +60,7 @@
 		
 
 		.mobile-disabled-alarm{
-			display: flex;
+			.display-flex;
 			flex-direction: column;
 			justify-content: center;
 			z-index: -1;
